--- a/src/pages/review/Search.module.scss
+++ b/src/pages/review/Search.module.scss
@@ -8,8 +8,11 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+      .detail_filter {
+        cursor: pointer;
+      }
       .detail_filter::after {
-        content: "";
+        content: '';
         display: inline-block;
         width: 19px;
         height: 100%;
@@ -18,7 +21,7 @@
         background: url(@/assets/images/btn_filter.png) no-repeat center/95%;
       }
       .detail_filter_show::after {
-        content: "";
+        content: '';
         display: inline-block;
         width: 19px;
         height: 100%;
@@ -57,6 +60,7 @@
             gap: 8px;
             .list_item {
               height: 40px;
+              line-height: 24px;
               background-color: #fff;
               border: 1px solid #aaa;
               border-radius: 5px;
@@ -67,12 +71,21 @@
                 height: 100%;
               }
             }
+            .selected {
+              background-color: #6269f5;
+              color: #fff;
+            }
           }
         }
         .region_corp {
           display: flex;
           flex-direction: column;
           gap: 40px;
+        }
+        & > div:nth-of-type(2) {
+          .item:nth-last-child(1) {
+            margin-top: 40px;
+          }
         }
       }
       .buttons {
@@ -123,11 +136,30 @@
           .region {
             display: flex;
             flex-direction: column;
+            min-width: 72px;
           }
           .corp {
             flex-grow: 1;
+            overflow: hidden;
             & > div {
               margin-top: 4px;
+            }
+            & > h4 {
+              width: 100%;
+              white-space: nowrap;
+              overflow: hidden;
+              text-overflow: ellipsis;
+            }
+            .hashtag {
+              display: -webkit-box;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              -webkit-line-clamp: 2;
+              -webkit-box-orient: vertical;
+              & > span {
+                margin-right: 12px;
+                white-space: nowrap;
+              }
             }
           }
         }
@@ -135,7 +167,7 @@
           display: flex;
           flex-direction: row;
           justify-content: end;
-          align-items: center;
+          align-items: baseline;
           & > img {
             width: 24px;
             height: 24px;
@@ -148,6 +180,27 @@
       }
     }
   }
+  .pagination {
+    margin-top: 120px;
+    display: flex;
+    justify-content: center;
+    & > div {
+      width: 40px;
+      height: 40px;
+      line-height: 40px;
+      text-align: center;
+      color: #888;
+      cursor: pointer;
+    }
+    .current {
+      border: 1px solid #aaa;
+      border-radius: 5px;
+      color: #222;
+      background-color: #fff;
+    }
+    & > span {
+    }
+  }
 }
 
 /* main end */
@@ -157,6 +210,11 @@
   .search_wrap {
     width: 86%;
     .filter_wrap {
+      .header {
+        .detail_filter {
+          display: none;
+        }
+      }
       .filter {
         background-color: #fff;
         border: 1px solid #aaa;
@@ -186,9 +244,15 @@
           align-items: flex-start;
           .info {
             flex-grow: 1;
+            .corp {
+              .hashtag {
+                -webkit-line-clamp: 1;
+              }
+            }
           }
           .star {
             width: 90px;
+            align-items: center;
           }
         }
       }
